# NIP-41

./: .gitattributes  .gitignore  LICENSE  PUBLISH-DOCS.md  README.md
harness/: .gitignore  CONFIRMATION-REPORT.md  README.md  cli.py  pyproject.toml  report.py
harness/nip41/: chain.py  derivation.py  event.py  hkdf.py  signing.py  verify.py
harness/oracles/: bip341_tweak.py  coincurve_oracle.py
harness/tests/: test_bip340_vectors.py  test_bip341_tweak.py  test_chain.py  test_cli.py  test_derivation.py  test_differential_tweak.py  test_draft_literal_bug.py  test_event.py  test_hkdf.py  test_properties.py  test_roundtrip.py  test_signing.py  test_smoke.py  test_verify.py
harness/vectors/: nip41-test-vectors.json
kmp/: .editorconfig  .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
kmp/demo/: build.gradle.kts
kmp/nip41/: Module.md  build.gradle.kts
open-questions/: rotation-event-history-depth.md
rust/: Cargo.toml  README.md
rust/benches/: chain.rs
rust/examples/: full_flow.rs  walkthrough.rs
rust/src/: consts.rs  crypto.rs  error.rs  lib.rs  nip19.rs
rust/src/chain/: derivation.rs  identity.rs  mod.rs  proof.rs
rust/src/event/: envelope.rs  kind_1041.rs  kind_1042.rs  mod.rs
rust/src/verify/: bridge.rs  is_committed.rs  kind_1041.rs  kind_1042.rs  mod.rs  resolve.rs
rust/tests/: bridge_vectors.rs  chain_properties.rs  derive_matches_vectors.rs  event_builders_match_vectors.rs  spec_vectors.rs
test-vectors/: nip-41-test-vectors.md  nip-41-test-vectors.py
(+41 files in other folders)
